# qgh

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LOOP.md  README.md  STATE.md  dist-workspace.toml  github-issues-wiki-hybrid-search-go-no-go.md  issue-triage-state.md  loop-budget.md  loop-constraints.md  loop-run-log.md  qgh-hybrid-search-prd.md  qgh-mvp-evidence-decision-summary.md  qgh-prd.md  qgh-product-brief.md  skills-lock.json
.agents/skills/ask-matt/: SKILL.md
.agents/skills/grill-drive/: SKILL.md
.agents/skills/issue-grill-with-docs/: SKILL.md
.agents/skills/orchestrating-qgh-worktrees/: SKILL.md
.codex/agents/: verifier.toml
.codex/skills/issue-triage/: SKILL.md
.codex/skills/loop-budget/: SKILL.md
.codex/skills/loop-constraints/: SKILL.md
.codex/skills/loop-triage/: SKILL.md
.github/workflows/: ci.yml  homebrew-prepublish-smoke.yml  homebrew-smoke.yml  release.yml  schedule-manager-gate.yml
.scratch/qgh-mvp/: PRD.md
.superpowers/sdd/: task-3-report.md
docs/: agent-skills.md  cli-json-contract.md  error-codes.md  local-qwen-models.md  privacy.md  release-artifact.json  release-checklist.md  safety.md  scheduling.md  search-quality-eval.md  search-quality-live-model-eval.md  search-quality-qwen-production-adapter-eval.md  search-quality-qwen-screening.md  vector-search-consistency.md
docs/adr/: 0001-local-first-read-only-cli-mcp-mvp.md  0002-source-identity-separate-from-locators.md  0003-bm25-only-mvp-vector-post-mvp.md  0004-issues-comments-only-mvp.md  0005-rust-single-binary-cli-mcp.md  0006-sqlite-authoritative-tantivy-derived-index.md  0007-explicit-xdg-profile-store.md  0008-versioned-json-error-envelope.md  0009-status-doctor-and-eval-boundary.md  0010-rest-sync-scheduler-contract.md  0011-first-run-init-wizard-and-command-resolution.md  0012-optional-local-vector-runtime-and-storage.md  0013-primary-homebrew-tap-release-channel.md  0014-cargo-dist-release-automation.md  0015-qwen-local-quality-preset-and-optional-reranking.md  0016-qwen-default-semantic-preset.md  0017-bm25-protected-semantic-complement.md  0018-explicit-profile-user-scheduling.md  0019-json-envelope-v2.md
docs/agents/: domain.md  issue-tracker.md  loop-automations.md
docs/schemas/: command-action.schema.json  doctor-output.schema.json  embed-output.schema.json  envelope.schema.json  error.schema.json  get-output.schema.json  init-output.schema.json  model-output.schema.json  query-result.schema.json  schedule-output.schema.json  status-output.schema.json  sync-output.schema.json
docs/superpowers/plans/: 2026-07-10-qgh-search-hardening-implementation.md
docs/superpowers/specs/: 2026-06-28-qgh-issue-grill-with-docs-design.md  2026-06-28-qgh-loop-engineering-design.md  2026-07-10-qgh-search-hardening-design.md
patterns/: daily-triage.md  issue-triage.md  registry.yaml
scripts/: verify-schedule-manager.sh
scripts/loop/: com.juicyjusung.qgh-loop.plist  com.juicyjusung.qgh-triage.plist  qgh-loop.sh  qgh-triage.sh
skills/qgh/: SKILL.md
skills/qgh/evals/: README.md  check_hard_gates.py  evals.json  run_benchmark.py  test_hard_gates.py  trigger-evals.json
skills/qgh/references/: evidence-research.md  retrieval.md  setup-and-recovery.md
skills/researching-with-qgh/: SKILL.md
skills/researching-with-qgh/evals/: evals.json  trigger-evals.json
skills/researching-with-qgh/references/: evidence-brief.md
skills/setting-up-qgh/: SKILL.md
skills/setting-up-qgh/evals/: evals.json  trigger-evals.json
skills/using-qgh-context/: SKILL.md
src/: app.rs  chunking.rs  cli.rs  commands.rs  config.rs  config_mutation.rs  context.rs  coverage.rs  embedding.rs  error.rs  freshness.rs  fusion.rs  github.rs  index.rs  init.rs  lease.rs  lib.rs  local_models.rs  main.rs  mcp.rs  model.rs  output.rs  paths.rs  qwen.rs  rate_budget.rs  repo_policy_mutation.rs  resolution.rs  schedule.rs  schedule_lifecycle.rs  store.rs  terminal.rs  time.rs
src/store/: purge_fs.rs
tests/: coreml_model_eval.rs  issue_body_tracer.rs  live_model_eval.rs  model_readiness_privacy.rs  qwen_embedding_benchmark.rs  release_contract.rs  search_quality_eval.rs
tests/support/: benchmark_qwen_retrieval.py  build_fresh_blind_model_eval_fixture.py  build_live_model_eval_fixture.py  live_model_eval_runtime.rs  prepare_live_model_eval_models.py  qwen_benchmark_requirements.txt  test_benchmark_qwen_retrieval.py  test_build_fresh_blind_model_eval_fixture.py
(+15 files in other folders)
