[package]
name = "qgh"
version = "0.1.1"
edition = "2021"
publish = false
description = "Local-first GitHub Issues retrieval CLI"
homepage = "https://github.com/juicyjusung/qgh"
repository = "https://github.com/juicyjusung/qgh"

[features]
default = []
fastembed-provider = ["dep:fastembed", "dep:hf-hub", "dep:tokenizers"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fastembed = { version = "5.17.2", default-features = false, features = ["ort-download-binaries-rustls-tls"], optional = true }
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "rustls-tls"], optional = true }
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlite-vec = "=0.1.9"
tantivy = "0.22"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tokenizers = { version = "0.22.2", optional = true }

[package.metadata.dist]
dist = true
formula = "qgh"

[profile.dist]
inherits = "release"
lto = "thin"
