[package]
name = "qgh"
version = "0.2.0"
edition = "2021"
publish = false
description = "Local-first GitHub Issues retrieval CLI"
homepage = "https://github.com/juicyjusung/qgh"
repository = "https://github.com/juicyjusung/qgh"

[features]
default = []
vector-search = ["dep:sqlite-vec"]
fastembed-provider = ["vector-search", "dep:fastembed", "dep:hf-hub", "dep:tokenizers", "dep:candle-core", "dep:candle-nn"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fastembed = { version = "5.17.2", default-features = false, features = ["ort-download-binaries-rustls-tls", "qwen3"], optional = true }
candle-core = { version = "=0.10.2", default-features = false, optional = true }
candle-nn = { version = "=0.10.2", default-features = false, optional = true }
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "rustls-tls"], optional = true }
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlite-vec = { version = "=0.1.9", optional = true }
tantivy = "0.22"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tokenizers = { version = "0.22.2", optional = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["coreml"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { version = "=0.10.2", default-features = false, features = ["accelerate", "metal"], optional = true }
candle-nn = { version = "=0.10.2", default-features = false, features = ["accelerate", "metal"], optional = true }

[patch.crates-io]
fastembed = { path = "vendor/fastembed-5.17.2" }

[package.metadata.dist]
dist = true
formula = "qgh"

[profile.dist]
inherits = "release"
lto = "thin"
